--- a/CmdPowerShell/main.resx
+++ b/CmdPowerShell/main.resx
@@ -117,4 +117,14 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="resultDownload_btn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAMxJREFUOE+9
+        lIEJQjEMBd8IjuAIbqAjOIIb6AY6ghvoCI7gBo6iGygHiUhoWvNBDwL9oTl+GlrpD8wlLZMos5b07MQp
+        Foy4SDrHpDFJepV0iEkD2U7SoyIdCVeSFhXpSMgZw9fSnvDYGBJBPqUnBFr+DAZITUom3NhAIuydJMwK
+        s/ybKJzZALyQNTmnLETAwd8k3W1NzikLgfPzibL+pCSkta2kvf0hwZqct10S0hrfrfC2h8Le49CCvdSk
+        jJ6vVvh1TOGBjTciC/b+lhe7PVvNjJAbGgAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
